--- a/bench-runtime-springboot/pom.xml
+++ b/bench-runtime-springboot/pom.xml
@@ -17,9 +17,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.yuan.common</groupId>
+            <groupId>com.bench.common</groupId>
             <artifactId>common-model</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
