--- a/bench-runtime-springboot/pom.xml
+++ b/bench-runtime-springboot/pom.xml
@@ -20,6 +20,11 @@
             <groupId>com.bench.common</groupId>
             <artifactId>common-model</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.bench.lang</groupId>
+            <artifactId>bench-lang-base</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
